# Twist-n-Sync-CPP-Module

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-ubuntu.yml  main-ubuntu.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  TimeSync.cpp  TimeSync.h
src/util/: CMakeLists.txt  CubicSpline.cpp  CubicSpline.h  TSUtil.cpp  TSUtil.h
tests/: CMakeLists.txt  final_result_tests.cpp  final_result_tests.h  main.cpp  tests.cpp  tsutil_tests.cpp  tsutil_tests.h
tests/inputData/sensors/: README.md  gyro_0-session_1.csv  gyro_0-session_2.csv  gyro_0-session_4.csv  gyro_1-session_1.csv  gyro_1-session_2.csv  gyro_1-session_4.csv
